# CBMV

./: .gitignore  README.md  disp.pfm  main.py  progressbar.py  run_MBV3_localExp.sh  run_test_cbmv.sh  run_train_cbmv.sh  test.py  train.py
cpp/: CMakeLists.txt  paramSetting.hpp
cpp/.metadata/.plugins/org.eclipse.cdt.make.core/: featextract.sc  features.sc  matchers.sc  rectification.sc
cpp/.metadata/.plugins/org.eclipse.core.resources/.projects/featextract/: .markers
cpp/.metadata/.plugins/org.eclipse.core.resources/.projects/featextract/.indexes/: history.index  properties.index
cpp/.metadata/.plugins/org.eclipse.core.resources/.projects/matchers/: .markers
cpp/.metadata/.plugins/org.eclipse.core.resources/.projects/matchers/.indexes/: properties.index
cpp/.metadata/.plugins/org.eclipse.core.resources/.projects/rectification/: .markers
cpp/.metadata/.plugins/org.eclipse.core.resources/.projects/rectification/.indexes/: properties.index
cpp/.metadata/.plugins/org.eclipse.core.resources/.root/: 6.tree
cpp/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
cpp/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
cpp/.metadata/.plugins/org.eclipse.linuxtools.cdt.libhover/C/: glibc_library.libhover
cpp/.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2017/4/14/: refactorings.history  refactorings.index
cpp/.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2017/4/15/: refactorings.history  refactorings.index
cpp/.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2017/4/16/: refactorings.history  refactorings.index
cpp/.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2017/6/23/: refactorings.history  refactorings.index
cpp/.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2017/6/24/: refactorings.history  refactorings.index
cpp/.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/matchers/2017/6/23/: refactorings.history  refactorings.index
cpp/.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/matchersmmxomp/2017/4/15/: refactorings.history  refactorings.index
cpp/.metadata/.plugins/org.eclipse.pde.core/.cache/: clean-cache.properties
cpp/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
cpp/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workbench.xml  workingsets.xml
cpp/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
cpp/featextract/: .cproject  .project  featextract.cpp
cpp/featextract/Debug/: featextract.d  makefile  subdir.mk
cpp/localexp/: ArgsParser.h  CMakeLists.txt  CostVolumeEnergy.h  Evaluator.h  FastGCStereo.h  GuidedFilter.h  LayerManager.h  PMStereoBase.h  Plane.h  StereoEnergy.h  Utilities.hpp  local_exp_stereo.cpp
cpp/localexp/eval/: eth3d_two_view_eval.cpp  evaluate_kt15_1_img.cpp  evaluate_kt15_1_img.h  io_disp.h  pfm_rw.cpp  pfm_rw.h
cpp/localexp/maxflow/: instances.inc
cpp/matchers/: .cproject  .project  matchers.cpp
cpp/matchers/Debug/: makefile  matchers.d  sources.mk  subdir.mk
cpp/post/: makefile  post.cu
cpp/rectification/: .cproject  .project  rectification.cpp
cpp/rectification/Debug/: makefile  objects.mk  rectification.d  subdir.mk
mb/: additional.txt  testset1.txt  testset2.txt  testset3.txt  trainall.txt  trainset1.txt  trainset2.txt  trainset3.txt  trainset_small.txt
pylibs/: pfmutil.py
